--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,12 @@ jobs:
         npm test
         npm run build
     - name: build image docker
-      run: |
-        docker build -t xbexke/cactus:${BRANCH#refs/heads/}-$COMMIT .
-        docker push xbexke/cactus:${BRANCH#refs/heads/}-$COMMIT
+      run: docker build -t xbexke/cactus:${BRANCH#refs/heads/}-$COMMIT .
+
+    - name: Log in to docker registry
+      env:
+        DOCKER_REGISTRY: 'docker.io'
+      run: echo ${{ secrets.SOLUTIONS_DOCKERHUB_PASSWORD }} | docker login $DOCKER_REGISTRY --username ${{ secrets.SOLUTIONS_DOCKERHUB_USERNAME }} --password-stdin
+
+    - name: Publish docker image
+      run: docker push xbexke/cactus:${BRANCH#refs/heads/}-$COMMIT
