move slack-notifier

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,3 +36,6 @@ jobs:
 
     - name: Publish docker image
       run: docker push xebxke/cactus:${BRANCH#refs/heads/}-$COMMIT
+
+    - name: notify on slack
+      uses: actions/slack-notifier@{BRANCH#refs/heads/}
