move slack-notifier

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,4 +38,4 @@ jobs:
       run: docker push xebxke/cactus:${BRANCH#refs/heads/}-$COMMIT
 
     - name: notify on slack
-      uses: actions/slack-notifier@{BRANCH#refs/heads/}
+      uses: ./.github/actions/slack-notifier
