--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
     - name: build image docker
       run: |
       docker build -t xebxke/cactus:${BRANCH#refs/heads/}-$COMMIT .
-      echo ::set-output name=docker_tag::xebxke/cactus:${BRANCH#refs/heads/}-$COMMIT"
+      echo "::set-output name=docker_tag::xebxke/cactus:${BRANCH#refs/heads/}-$COMMIT"
 
     - name: Log in to docker registry
       env:
