--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,10 +21,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
-      run: |
-        npm ci
-        npm run build --if-present
-        npm test
       env:
-        CI: true
+        BRANCH: ${{ GITHUB_REF }}
+        COMMIT: ${{ GITHUB_SHA }}
+      run: |
+        docker build -t xebxke/ifall:$BRANCH-$COMMIT
+      
 
