--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,8 +22,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       env:
-        BRANCH: ${{ GITHUB_REF }}
-        COMMIT: ${{ GITHUB_SHA }}
+        BRANCH: ${{ github.ref }}
+        COMMIT: ${{ github.sha }}
       run: |
         docker build -t xebxke/ifall:$BRANCH-$COMMIT
       
