--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,6 +10,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      BRANCH: ${{ github.ref }}
+      COMMIT: ${{ secret.token }}
+
     strategy:
       matrix:
         node-version: [8.x]
@@ -24,3 +28,5 @@ jobs:
       run: npm install && npm test && npm run build
       env:
         CI: true
+    - name: docker
+      run: docker build -t docker.io/xebxke/awesomeimage:${BRANCH#/refs/heads/}/$COMMIT .
