--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,6 @@ jobs:
         BRANCH: ${{ github.ref }}
         COMMIT: ${{ github.sha }}
       run: |
-        docker build -t xebxke/ifall:$BRANCH-$COMMIT -f ifall .
+        docker build -t xebxke/ifall:$BRANCH-$COMMIT .
       
 
