Push to docker hub.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,7 @@ jobs:
       run: npm run build
     - name: Create container image
       run: docker build -t xebxke/doudou:${BRANCH#/refs/heads/}-${COMMIT} .
+    - name: Log into Docker Hub
+      run: docker login xebxke -p ${secret.EDOUARD_DOCKER_PASSWORD}
+    - name: Push container image
+      run: docker push xebxke/doudou:${BRANCH#/refs/heads/}-${COMMIT}
