Ex 2 - Fix COMMIT variable

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ jobs:
 
     env:
       BRANCH: ${{ github.ref }}
-      COMMIT: ${{ secret.token }}
+      COMMIT: ${{ github.sha }}
 
     strategy:
       matrix:
