--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,3 +26,4 @@ jobs:
         COMMIT: ${{ github.sha }}
       run: |
         docker build -t xebxke/ifall:${BRANCH#/ref/head/}-$COMMIT .
+        docker push xebxke/ifall:${BRANCH#/ref/head/}-$COMMIT
