--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Run NPM build
       run: npm run build
     - name: Create container image
-      run: docker build -t xebxke/doudou:${BRANCH#/refs/heads/}-${COMMIT} .
+      run: docker build -t xebxke/doudou:${BRANCH#refs/heads/}-${COMMIT} .
     - name: Log into Docker Hub
       run: docker login xebxke -p ${secret.EDOUARD_DOCKER_PASSWORD}
     - name: Push container image
-      run: docker push xebxke/doudou:${BRANCH#/refs/heads/}-${COMMIT}
+      run: docker push xebxke/doudou:${BRANCH#refs/heads/}-${COMMIT}
