--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,9 +18,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
-      run: 
+      run: |
         npm install 
         npm test 
         npm run build
       env:
         CI: true
+    - name: build docker image
+      run : | 
+        docker build -t docker.io/xebxke/geraud-image:${github.ref}-${github.sha} -f Dockerfile .
+
