--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,4 +30,4 @@ jobs:
         CI: true
     - name: docker build
       run: |
-        docker build -t xebxke/$BRANCH:varrocen-$COMMIT .
+        docker build -t xebxke/${BRANCH}:varrocen-${COMMIT} .
