--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,7 @@ jobs:
         npm run build
     - name: build docker image
       run : |
-        docker build -t xebxke/bidule:jcb-$GITHUB_SHA -f Dockerfile  .
+        docker build -t xebxke/bidule:{BRANCH#/ref/head/}${COMMIT} -f Dockerfile  .
       env:
-        CI: true
+        BRANCH: {{ github.ref }}
+        COMMIT: {{ github.sha }}
