--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,4 +25,6 @@ jobs:
         BRANCH: ${{ github.ref }}
         COMMIT: ${{ github.sha }}
       run: |
-        docker build -t xebxke/ifall:${BRANCH#/refs/heads/}-$COMMIT .
+        npm install
+        npm build
+        docker build -t docker.io/xebxke/ifall:${BRANCH#/refs/heads/}-$COMMIT .
